Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112914

Qt3D/Windows[D3D11]: Crash at destruction

XMLWordPrintable

    • Windows
    • 62a4ca773 (dev), 9a21c69f6 (dev), 82cb267d7 (6.5), 5f8badb5e (6.5)

      Attached example crashes like this on destruction:

      Exception thrown: read access violation.
      **_Mem** was 0xFFFFFFFFFFFFFFFF.
      
      Qt6Guid.dll!std::_Atomic_storage<int,4>::load(const std::memory_order _Order) Line 1001 C++
      >	Qt6Guid.dll!QAtomicOps<int>::loadRelaxed<int>(const std::atomic<int> & _q_value) Line 202	C++
      Qt6Guid.dll!QBasicAtomicInteger<int>::loadRelaxed() Line 40 C++
      Qt6Guid.dll!QtPrivate::RefCount::isShared() Line 40 C++
      Qt6Guid.dll!QHash<QRhiResource *,QHashDummyValue>::isDetached() Line 942 C++
      Qt6Guid.dll!QHash<QRhiResource *,QHashDummyValue>::emplace<QHashDummyValue const &>(QRhiResource * && key, const QHashDummyValue & <args_0>) Line 1309 C++
      Qt6Guid.dll!QHash<QRhiResource *,QHashDummyValue>::emplace<QHashDummyValue const &>(QRhiResource * const & key, const QHashDummyValue & <args_0>) Line 1303 C++
      Qt6Guid.dll!QHash<QRhiResource *,QHashDummyValue>::insert(QRhiResource * const & key, const QHashDummyValue & value) Line 1281 C++
      Qt6Guid.dll!QSet<QRhiResource *>::insert(QRhiResource * const & value) Line 156 C++
      Qt6Guid.dll!QRhiImplementation::addDeleteLater(QRhiResource * res) Line 169 C++
      Qt6Guid.dll!QRhiResource::deleteLater() Line 2175 C++
      rhirendererd.dll!Qt3DRender::Render::Rhi::RenderCommand::~RenderCommand() Line 66 C++
      [External Code]
      rhirendererd.dll!QtSharedPointer::ExternalRefCountWithContiguousData<Qt3DRender::Render::EntityRenderCommandDataView<Qt3DRender::Render::Rhi::RenderCommand>>::deleter(QtSharedPointer::ExternalRefCountData * self) Line 221 C++
      rhirendererd.dll!QtSharedPointer::ExternalRefCountData::destroy() Line 114 C++
      rhirendererd.dll!QSharedPointer<Qt3DRender::Render::EntityRenderCommandDataView<Qt3DRender::Render::Rhi::RenderCommand>>::deref(QtSharedPointer::ExternalRefCountData * dd) Line 447 C++
      rhirendererd.dll!QSharedPointer<Qt3DRender::Render::EntityRenderCommandDataView<Qt3DRender::Render::Rhi::RenderCommand>>::deref() Line 440 C++
      rhirendererd.dll!QSharedPointer<Qt3DRender::Render::EntityRenderCommandDataView<Qt3DRender::Render::Rhi::RenderCommand>>::~QSharedPointer<Qt3DRender::Render::EntityRenderCommandDataView<Qt3DRender::Render::Rhi::RenderCommand>>() Line 280 C++
      [External Code]
      rhirendererd.dll!QHashPrivate::Span<QHashPrivate::Node<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>>::freeData() Line 272 C++
      rhirendererd.dll!QHashPrivate::Span<QHashPrivate::Node<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>>::~Span<QHashPrivate::Node<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>>() Line 264 C++
      [External Code]
      rhirendererd.dll!QHashPrivate::Data<QHashPrivate::Node<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>>::~Data<QHashPrivate::Node<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>>() Line 766 C++
      [External Code]
      rhirendererd.dll!QHash<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>::~QHash<Qt3DRender::Render::FrameGraphNode *,Qt3DRender::Render::RendererCache<Qt3DRender::Render::Rhi::RenderCommand>::LeafNodeData>() Line 851 C++
      [External Code]
      rhirendererd.dll!Qt3DRender::Render::Rhi::Renderer::~Renderer() Line 261 C++
      [External Code]
      Qt63DRenderd.dll!Qt3DRender::QRenderAspect::onUnregistered() Line 834 C++
      Qt63DCored.dll!Qt3DCore::QAspectManager::unregisterAspect(Qt3DCore::QAbstractAspect * aspect) Line 352 C++
      Qt63DCored.dll!Qt3DCore::QAspectEngine::unregisterAspect(Qt3DCore::QAbstractAspect * aspect) Line 321 C++
      Qt63DCored.dll!Qt3DCore::QAspectEngine::~QAspectEngine() Line 206 C++
      [External Code]
      Qt63DExtrasd.dll!Qt3DExtras::Qt3DWindow::~Qt3DWindow() Line 85 C++
      qt3d-clean-up-issue.exe!main(int argc, char * * argv) Line 63 C++
      

        1. qtbug112914_valgrind.txt
          27 kB
          Friedemann Kleint
        2. qtbug112914.zip
          1 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-112914
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes