Fix valgrind issue in GeometryRenderer

Initialize member hasView, fixing:

==20448== Conditional jump or move depends on uninitialised value(s)
==20448==  Uninitialised value was created by a heap allocation
==20448==    at 0x484DE30: memalign (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==20448==    by 0x484DF92: posix_memalign (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==20448==    by 0x4DC9DEE: _mm_malloc (mm_malloc.h:45)
==20448==    by 0x4DC9DEE: Qt3DCore::AlignedAllocator::allocate(unsigned int) (qresourcemanager.cpp:63)
==20448==    by 0x4B45C7F: allocateBucket (qresourcemanager_p.h:265)
==20448==    by 0x4B45C7F: allocateResource (qresourcemanager_p.h:202)
==20448==    by 0x4B45C7F: getOrAcquireHandle (qresourcemanager_p.h:369)
==20448==    by 0x4B45C7F: getOrCreateResource (qresourcemanager_p.h:396)
==20448==    by 0x4B45C7F: Qt3DRender::Render::GeometryRendererFunctor::create(Qt3DCore::QNodeId) const (geometryrenderer.cpp:191)

Task-number: QTBUG-112914
Change-Id: I7e55a782c85cbbdd538eab0a775a5aaa0f6d4b4c
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit 9a21c69f67110e84c01645564cecce7099600152)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>