src/render/geometry/geometryrenderer.cpp
@@ -32,6 +32,7 @@ GeometryRenderer::GeometryRenderer()
     , m_primitiveRestartEnabled(false)
     , m_primitiveType(QGeometryRenderer::Triangles)
     , m_dirty(false)
+    , m_hasView(false)
     , m_manager(nullptr)
     , m_sortIndex(-1.f)
 {
@@ -55,7 +56,7 @@ void GeometryRenderer::cleanup()
     m_primitiveRestartEnabled = false;
     m_primitiveType = QGeometryRenderer::Triangles;
     m_geometryId = Qt3DCore::QNodeId();
-    m_dirty = false;
+    m_hasView = m_dirty = false;
     m_geometryFactory.reset();
     m_sortIndex = -1.f;
 }
